--- a/offer.html
+++ b/offer.html
@@ -65,18 +65,19 @@
 </head>
 <body>
   <img src="logo.png" alt="Aurum Domains Logo" class="logo" width="150"/>
-  <h1>Submit Your Private Offer for <strong>dbxai.xyz</strong></h1>
-  <p>Please complete the form below to submit your offer. This is a private invitation only.</p>
+  <h1>Submit Your Private Offer for <strong>XParagon.com</strong></h1>
+  <p>Please complete the form below to submit your offer. This is by private invitation only.</p>
 
   <form id="offerForm" action="https://formspree.io/f/xovdqjbp" method="POST" onsubmit="return showThankYou();">
-    <input type="hidden" name="domain" value="dbxai.xyz" />
+    <input type="hidden" name="domain" value="XParagon.com" />
+    <input type="text" name="name" placeholder="Your Name or Company Name" required />
     <input type="email" name="email" placeholder="Your Email Address" required />
     <input type="text" name="offer" placeholder="Your Offer (USD)" required />
     <button type="submit">Submit Offer</button>
   </form>
 
   <div class="thank-you" id="thankYouMessage">
-    Thank you for your offer. Our team will review it and reach out if selected.
+    Thank you for your offer. Our team will review it and contact you if you are successful.
   </div>
 
   <script>
