--- a/offer.html
+++ b/offer.html
@@ -74,6 +74,8 @@
   <img src="logo.png" alt="Aurum Domains Logo" class="logo" width="150"/>
   <h1>Submit Your Private Offer for <strong>XParagon.com</strong></h1>
   <p>Please complete the form below to submit your offer. This is by private invitation only.</p>
+  <p><strong>Guide Price:</strong> $40,000</p>
+  <p>All offers remain strictly confidential. You may submit a bid above or below the guide price — the highest qualifying bid received during the invitation window will be accepted.</p>
 
   <form id="offerForm" action="https://formspree.io/f/xovdqjbp" method="POST" onsubmit="return showThankYou();">
     <input type="hidden" name="domain" value="XParagon.com" />
