--- a/offer.html
+++ b/offer.html
@@ -77,24 +77,46 @@
   <p><strong>Guide Price:</strong> $40,000</p>
   <p>All offers remain strictly confidential. You may submit a bid above or below the guide price — the highest qualifying bid received during the invitation window will be accepted.</p>
 
-  <form id="offerForm" action="https://formspree.io/f/xovdqjbp" method="POST" onsubmit="return showThankYou();">
-    <input type="hidden" name="domain" value="XParagon.com" />
-    <input type="text" name="name" placeholder="Your Name or Company Name" required />
-    <input type="email" name="email" placeholder="Your Email Address" required />
-    <input type="text" name="offer" placeholder="Your Offer (USD)" required />
-    <button type="submit">Submit Offer</button>
-  </form>
+<form id="offerForm">
+  <input type="hidden" name="domain" value="XParagon.com" />
+  <input type="text" name="name" placeholder="Your Name or Company Name" required />
+  <input type="email" name="email" placeholder="Your Email Address" required />
+  <input type="text" name="offer" placeholder="Your Offer (USD)" required />
+  <button type="submit">Submit Offer</button>
+</form>
 
-  <div class="thank-you" id="thankYouMessage">
-    Thank you for your offer. Our team will review it and contact you if you are successful.
-  </div>
+<div class="thank-you" id="thankYouMessage" style="display: none;">
+  Thank you for your offer. Our team will review it and contact you if you are successful.
+</div>
 
-  <script>
-    function showThankYou() {
-      document.getElementById('offerForm').style.display = 'none';
-      document.getElementById('thankYouMessage').style.display = 'block';
-      return true; // still allow form to submit to Formspree
+<script>
+  const form = document.getElementById('offerForm');
+  const thankYouMessage = document.getElementById('thankYouMessage');
+
+  form.addEventListener('submit', async function (e) {
+    e.preventDefault(); // stops default submission & redirect
+
+    const data = new FormData(form);
+
+    try {
+      const response = await fetch('https://formspree.io/f/xovdqjbp', {
+        method: 'POST',
+        body: data,
+        headers: {
+          'Accept': 'application/json'
+        }
+      });
+
+      if (response.ok) {
+        form.style.display = 'none';
+        thankYouMessage.style.display = 'block';
+      } else {
+        alert('There was an issue submitting the form.');
+      }
+    } catch (error) {
+      alert('Submission failed. Please try again.');
     }
-  </script>
+  });
+</script>
 </body>
 </html>
